<resources>
    <string name="app_name">Popcorn Movies</string>

    <!-- Udacity reviewer or GitHub cloner: uncomment the following line and add your API key. -->
    <!--<string name="themoviedb_api_key">[Insert your themoviedb.org API key here.]</string>-->

    <string name="movie_poster_content_description">Movie Poster</string>
    <string name="tmdb_base_url">http://api.themoviedb.org/3/movie</string>
    <string name="tmdb_json_sample">"vote_count":1732,"id":337167,"video":false,"vote_average":6,"title":"Fifty Shades Freed","popularity":550.951642,"poster_path":"\/jjPJ4s3DWZZvI4vw8Xfi4Vqa1Q8.jpg","original_language":"en","original_title":"Fifty Shades Freed","genre_ids":[18,10749],"backdrop_path":"\/9ywA15OAiwjSTvg3cBs9B7kOCBF.jpg","adult":false,"overview":"Believing they have left behind shadowy figures from their past, newlyweds Christian and Ana fully embrace an inextricable connection and shared life of luxury. But just as she steps into her role as Mrs. Grey and he relaxes into an unfamiliar stability, new threats could jeopardize their happy ending before it even begins.","release_date":"2018-02-07"</string>
    <string name="poster_base_URL">http://image.tmdb.org/t/p/w185</string>
    <string name="rating">4.6</string>
    <string name="release_date">2018-04-25</string>
    <string name="rating_label">Rating:</string>
    <string name="release_date_label">Release date:</string>
    <string name="title">Movie Title</string>
    <string name="synopsis">Move synopsis here.</string>
    <string name="settings_menu_label">Settings</string>
    <string name="order_preference_title">Order by</string>
    <string name="order_preference_popular_value">popular</string>
    <string name="order_preference_key">order</string>
    <string name="order_preference_popular_label">Popularity</string>
    <string name="order_preference_rating_label">Rating</string>
    <string name="order_preference_rating_value">top_rated</string>
    <string name="order_preference_default">popular</string>
</resources>
